# detector

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  setting.ini  version-template.txt
3rd/: CMakeLists.txt
3rd/bcm2835/: CMakeLists.txt
3rd/config/motion/: motion.conf.in
3rd/config/motion/conf.d/: camera_ip.conf
3rd/patch/: darknet-CMakeLists.txt  darknet-opencv3_c_compile.patch  opencv-cmake_install_prefix.patch  opencv_contrib-cmake_install_prefix.patch
app/: CMakeLists.txt  config.h.in  main.cpp
app/resources/: resources.qrc
apps/: CMakeLists.txt
apps/detector/: CMakeLists.txt  config.h.in  constant.h  detector.cpp  detector.h  detectorapplication.cpp  detectorapplication.h  main.cpp
apps/pinled/: CMakeLists.txt  main.cpp
cmake/: detector.cmake
config/motion/: motion.conf.in
config/motion/conf.d/: camera_usb.conf
lib/: CMakeLists.txt  detector.cpp  detector.h  pin.h  pinled.cpp
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt  core.cpp  core.h
libs/detect/: CMakeLists.txt  detect.cpp  detect.h  iobserver.cpp  iobserver.h  newframethread.cpp  newframethread.h  video.cpp  video.h  videowriter.cpp  videowriter.h
libs/detect/detectors/: detectorface.cpp  detectorface.h  detectormotion.cpp  detectormotion.h  idetector.cpp  idetector.h
libs/rpi/: CMakeLists.txt  pinled.h
